version/0.63/_sources/examples/index.rst.txt
.. _ref_examples:

========
Examples
========


Here are a series of examples using MAPDL with ``ansys-mapdl-core``.


.. === EXAMPLES Gallery ===

..
   We have to include this rather than include it in a tree.

.. include:: gallery_examples/index.rst
   :start-line: 2

.. === TECHNOLOGY SHOWCASE EXAMPLES ===

.. toctree::
    :hidden:
    :maxdepth: 3

    technology_showcase_examples/techdemo-1/ex_0-tecbrakesqueal
    technology_showcase_examples/techdemo-20/20-example-technology-showcase-dynamic-simulation-PCB
    technology_showcase_examples/techdemo-28/ex_28-tecfricstir

.. include:: technology_showcase_examples/README.txt
   :start-line: 2


.. === EXTENDED EXAMPLES ===

.. toctree::
    :hidden:
    :maxdepth: 3

    Cart-Pole Simulation <https://pyansys.github.io/ml-rl-cartpole/ml-rl-notebook.html>
    extended_examples/ex_01-gmsh_example/ex_01-gmsh_example
    extended_examples/Python_UPF/python_upf_examples

.. include:: extended_examples/index.rst
   :start-line: 2


.. === DOWNLOAD EXAMPLES ===

.. _ref_download_files:

Download Example Files
======================

Each example should contain all the necessary resources to run the example.
However in some cases, external files are needed. A link to those files is
available at each example page.
These links refers to the following GitHub repository where you can find all of them:

`GitHub Example Data Repository <https://github.com/pyansys/example-data>`_

If you find out a missing or broken link, please open an issue in
Github (`PyMAPDL Issues <https://github.com/pyansys/pymapdl/issues>`_) 
or email us at `PyAnsys Support <pyansys.support@ansys.com>`_. 



