version/0.64/_sources/examples/index.rst.txt
.. _ref_examples:

========
Examples
========


Here are a series of examples using MAPDL with the ``ansys-mapdl-core`` library.


.. === EXAMPLES Gallery ===

..
   We have to include this rather than include it in a tree.

.. include:: gallery_examples/index.rst
   :start-line: 2


.. === PYMAPDL EXAMPLES ===

.. toctree::
    :hidden:
    :maxdepth: 3
    
    Verification Manual <https://examples.mapdl.docs.pyansys.com/verif-manual/index.html>
    Technology Showcases <https://examples.mapdl.docs.pyansys.com/technology_showcase_examples/index.html>


.. include:: pymapdl_examples_repo/index.rst
   :start-line: 2

.. === EXTENDED EXAMPLES ===

.. toctree::
    :hidden:
    :maxdepth: 3
    
    Cart-Pole Simulation <https://pyansys.github.io/ml-rl-cartpole/ml-rl-notebook.html>
    extended_examples/ex_01-gmsh_example/ex_01-gmsh_example
    extended_examples/Python_UPF/python_upf_examples
    extended_examples/Krylov/krylov_example
    extended_examples/dash/dash_example
    extended_examples/executable/executable

.. include:: extended_examples/index.rst
   :start-line: 2


.. === DOWNLOAD EXAMPLES ===

.. _ref_download_files:

Download example files
======================

Each example should contain all the necessary resources to run the example.
However in some cases, external files are needed. A link to those files is
available at each example page.
These links refers to the following GitHub repository where you can find all of them:

`GitHub Example Data Repository <example_data_repo_>`_

If you find a missing or broken link, open an issue in
GitHub (`PyMAPDL Issues <pymapdl_issues_>`_) 
or send an email to `PyAnsys Support <pyansys_support_>`_. 
